--- a/Common/Window/Navigation/Link.twig
+++ b/Common/Window/Navigation/Link.twig
@@ -1,7 +1,22 @@
 <li class="{{ ActiveClass }}">
-    <a href="{{ Route }}" data-trigger="hover" data-toggle="popover" data-content="{{ ElementToolTip }}">
+    <a id="{{ ElementHash }}" href="{{ Route }}" data-trigger="hover" data-toggle="popover" data-content="{{ ElementToolTip }}">
         {% if( Icon is not empty ) %}{{ Icon }}&nbsp;{% endif %}{{ Name }}
     </a>
+    {% if( AjaxEventClick is not empty ) %}
+        <script language=javascript>
+            //noinspection JSUnresolvedFunction
+            executeScript(function()
+            {
+                Client.Use("ModAjax", function()
+                {
+                    jQuery("a#{{ ElementHash }}").on("click", function(Event) {
+                        Event.preventDefault();
+                        {{ AjaxEventClick }}
+                    });
+                });
+            });
+        </script>
+    {% endif %}
     <script>
         //noinspection JSUnresolvedFunction
         executeScript(function()
