More Examples & Tests (DHI) (Pipeline Data Transfer unstable)

--- a/Common/Frontend/Ajax/Emitter/ScriptEmitter/CloseModalScript.twig
+++ b/Common/Frontend/Ajax/Emitter/ScriptEmitter/CloseModalScript.twig
@@ -1,3 +1,4 @@
+{#$("#{{ Modal }}").modal("hide");#}
 $("#{{ Modal }}").modal("toggle");
 $(".modal-backdrop").fadeOut('fast',function(){
     $("body").removeClass( "modal-open" );
