--- a/Common/Frontend/Form/Structure/Form.twig
+++ b/Common/Frontend/Form/Structure/Form.twig
@@ -63,6 +63,11 @@
                 {% if FormConfirm is not empty %}notifyChangedMessage: "{{ FormConfirm }}"{% else %}notifyChangedField: false{% endif %}
                 {% if EnableSaveDraft is not empty %},saveDraftData: {{ EnableSaveDraft }}{% endif %}
             });
+            {% if( DisableSubmitAction is not empty ) %}
+            jQuery("form#{{ Hash }}").on('submit', function (Event) {
+                Event.preventDefault();
+            });
+            {% endif %}
             {% if( AjaxEventSubmit is not empty ) %}
             Client.Use('ModAjax', function() {
                 jQuery("form#{{ Hash }}").on('submit', function (Event) {
